--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER_NAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/lecherosappdb?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Xfgcrkuz3.
+
+#configuracion para dockerizar
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USER_NAME}
+#spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
